commit number three

--- a/web/components/sections/Main/Main.module.css
+++ b/web/components/sections/Main/Main.module.css
@@ -46,3 +46,14 @@
   font-weight: 700;
   line-height: normal;
 }
+
+.p {
+  color: #FFF;
+  text-align: center;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
